修复工具提示并改进消息框显示
在 `MainWindow.xaml` 中更新 `TestButton` 的工具提示为“实验功能”。
修正 `using` 语句中的拼写错误。
将成功和失败的消息框从 `MessageBox` 更改为 `CustomMessageBox`，并使用相应的图标。
设置消息框的拥有者为当前窗口，并优化错误信息的显示方式。

--- a/KAnimGui/MainWindow.xaml
+++ b/KAnimGui/MainWindow.xaml
@@ -127,7 +127,7 @@
                             Foreground="White" ToolTip="Github"  FocusVisualStyle="{x:Null}" 
                             Content="{materialDesign:PackIcon Kind=Github}" Click="GithubButton_Click"/>
                     <Button Grid.Column="3" x:Name="TestButton" Style="{StaticResource MaterialDesignIconButton}" 
-                            Foreground="White" ToolTip="实验按钮"  FocusVisualStyle="{x:Null}" 
+                            Foreground="White" ToolTip="实验功能"  FocusVisualStyle="{x:Null}" 
                             Content="{materialDesign:PackIcon Kind=TestTube}" Click="TestButton_Click"/>
 
                     <!-- PinButton 靠右 -->
