修复和优化配置文件及界面元素
在 `App.config` 中将 XML 版本更改为 `1.0`。
对 `App.xaml` 和 `MainWindow.xaml` 进行了格式化调整，确保属性一致性并添加注释。
在 `MainWindow.xaml.cs` 中添加了对 `kanimal-cli.exe` 的路径检查，简化了文件处理逻辑，并添加了设置更改通知。
更新 `ConversionResult.cs` 中的 `ErrorMessage` 属性为 `required`。
改进了 `CustomMessageBox` 的构造函数实现，增强可读性。
在 `SettingsWindow.xaml.cs` 中确保设置更新后主窗口能够响应变化。

--- a/KAnimGui/Windows/CustomMessageBox.xaml
+++ b/KAnimGui/Windows/CustomMessageBox.xaml
@@ -105,8 +105,7 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="230" />
-
+                                <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="Auto" />
 
                             </Grid.ColumnDefinitions>
@@ -114,12 +113,12 @@
                             <!--  左上角按钮  -->
                             <Button
                                 Grid.Column="0"
-                                Width="20"
-                                Height="20"
+                                Width="30"
+                                Height="30"
                                 Margin="2,2,2,0"
                                 Padding="0"
                                 VerticalAlignment="Top"
-                                materialDesign:ButtonAssist.CornerRadius="10"
+                                materialDesign:ButtonAssist.CornerRadius="100"
                                 Background="#FF93425C"
                                 BorderThickness="0"
                                 Click="Button_Click"
@@ -127,11 +126,23 @@
                                 Foreground="White">
                                 <materialDesign:PackIcon
                                     x:Name="IconPack"
-                                    Width="14"
-                                    Height="14"
+                                    Width="25"
+                                    Height="25"
                                     Foreground="White"
                                     Kind="WarningCircle" />
                             </Button>
+
+                            <TextBlock
+                                x:Name="TitleTextBlock"
+                                Grid.Column="1"
+                                Margin="5,0,0,0"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Center"
+                                FontFamily="Microsoft YaHei UI"
+                                FontSize="13"
+                                Foreground="#777777"
+                                Text="{Binding Title, RelativeSource={RelativeSource AncestorType=Window}}" />
+
 
 
 
