--- a/KAnimGui/App.xaml
+++ b/KAnimGui/App.xaml
@@ -1,49 +1,35 @@
-﻿<Application 
-  x:Class="KAnimGui.App"
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-  StartupUri="MainWindow.xaml">
+﻿<Application
+    x:Class="KAnimGui.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="DeepPurple" SecondaryColor="Lime" />
-                
-
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign2.Defaults.xaml" />
+                <materialDesign:BundledTheme
+                    BaseTheme="Light"
+                    PrimaryColor="DeepPurple"
+                    SecondaryColor="Lime" />
 
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
-                <!-- 必须添加的进度条专用资源 -->
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.ProgressBar.xaml"/>
-                
-                
-                
 
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.ProgressBar.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <!-- 定义全局文本样式 -->
             <Style TargetType="TextBlock">
-                <Setter Property="FontFamily" Value="Microsoft YaHei"/>
-                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="FontFamily" Value="Microsoft YaHei" />
+                <Setter Property="FontSize" Value="14" />
             </Style>
 
-            <!-- 全局禁用所有控件的焦点虚线框 -->
             <Style TargetType="Control">
                 <Setter Property="FocusVisualStyle" Value="{x:Null}" />
             </Style>
 
-
-
-            <!-- 定义按钮的全局样式 -->
-            <Style TargetType="Button">
-                <Setter Property="FontFamily" Value="Segoe UI"/>
-                <Setter Property="FontSize" Value="15"/>
-                <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+            <Style BasedOn="{StaticResource MaterialDesignRaisedButton}" TargetType="Button">
+                <Setter Property="FontFamily" Value="Segoe UI" />
+                <Setter Property="FontSize" Value="15" />
             </Style>
         </ResourceDictionary>
-        
-        
     </Application.Resources>
-    
-    
 </Application>
